2008-08-06  Aldy Hernandez  <aldyh@redhat.com>

	PR middle-end/35432
	* gcc.c-torture/compile/pr35432.c: New file.

2008-08-06  Maxim Kuvyrkov  <maxim@codesourcery.com>

	Backport from mainline:
	2008-08-06  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* gcc.target/ia64/20080802-1.c: New test.

2008-08-05  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37026
	* gcc.c-torture/compile/pr37026.c: New testcase.

2008-08-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36691
	* gcc.c-torture/execute/pr36691.c: New testcase.

2008-08-01  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/36991
	* gcc.dg/pr36991.c: New test.

2008-07-31  Jakub Jelinek  <jakub@redhat.com>

	PR preprocessor/36649
	* gcc.dg/pch/cpp-3.hs: Add include guards.
	* gcc.dg/pch/cpp-3a.h: Likewise.
	* gcc.dg/pch/cpp-3b.h: Likewise.
	* gcc.dg/cpp/mi8.c: New test.
	* gcc.dg/cpp/mi8a.h: New file.
	* gcc.dg/cpp/mi8b.h: New file.
	* gcc.dg/cpp/mi8c.h: New file.
	* gcc.dg/cpp/mi8d.h: New file.

	PR rtl-optimization/36419
	* g++.dg/eh/async-unwind2.C: New test.

	PR c++/36405
	* g++.dg/rtti/typeid8.C: New test.

	PR debug/36278
	* g++.dg/debug/namespace2.C: New test.

	PR preprocessor/36649
	* gcc.dg/pch/cpp-3.c: New test.
	* gcc.dg/pch/cpp-3.hs: New file.
	* gcc.dg/pch/cpp-3a.h: New file.
	* gcc.dg/pch/cpp-3b.h: New file.

2008-07-30  Dodji Seketeli  <dseketel@redhat.com>

	PR c++/36767
	* g++.dg/parse/crash41.C: New test.

2008-07-29  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36852
	* g++.dg/pch/array-1.C: New test.
	* g++.dg/pch/array-1.Hs: New file.

2008-07-27  Tobias Burnus  <burnus@net-b.de>

	PR fortran/36132
	* gfortran.dg/internal_pack_4.f90: New.

2008-07-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/36852
	* gfortran.dg/namelist_52.f90: New test.

2008-07-25  Joseph Myers  <joseph@codesourcery.com>

	* lib/target-supports.exp (check_effective_target_arm_thumb1_ok):
	New.
	* g++.dg/inherit/thunk8.C: Use it.

2008-07-23  Ian Lance Taylor  <iant@google.com>
