@@ -1,3 +1,8 @@
+2008-08-06  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/35432
+	* gcc.c-torture/compile/pr35432.c: Remove duplicate.
+
 2008-08-06  Aldy Hernandez  <aldyh@redhat.com>
 
 	PR middle-end/35432
